[project]
name = "ipinfo"
dynamic = ["version"]
description = "Official Python library for IPInfo"
readme = "README.md"
authors = [
    { name = "IPinfo", email = "support@ipinfo.io" }
]
license = { text = "Apache License 2.0" }
requires-python = ">=3.10"
dependencies = [
    "requests>=2.18.4,<3",
    "cachetools>=4.2,<8",
    "aiohttp>=3,<4",
]

[project.urls]
Homepage = "https://github.com/ipinfo/python"
Documentation = "https://ipinfo.io/developers"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "ipinfo/version.py"

[tool.hatch.build.targets.wheel]
packages = ["ipinfo"]

[dependency-groups]
dev = [
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "black==22.6.0",
]
